--- a/2024/tainted/Cargo.toml
+++ b/2024/tainted/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "bevymae"
+name = "tainted"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.13"
+bevy = "0.13.0"
